--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
-<html lang="English">
+<html>
 <head>
     <title>Content Filter</title>
-    <style>
-        body {
-            width: 200px;
-        }
-        h1 {
-            font-size: 18px;
-        }
-    </style>
 </head>
 <body>
 <h1>Content Filter Settings</h1>
